Fixed bug with scrollbar for runs table

--- a/pegasus/gtfar/static/css/main.css
+++ b/pegasus/gtfar/static/css/main.css
@@ -61,8 +61,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     border: 1px solid rgb(212, 212, 212);
 }
 
-.hideScrollX * {
-    overflow: hidden;
+.ngViewport {
+    overflow-x: hidden;
 }
 
 .borderless td {
